--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,7 @@ body {
   font-family: "Roboto", sans-serif;
   color: var(--text-color);
   font-size: 16px;
-
-  padding-top: 76px;
+  padding-top: 70px;
 }
 
 h1,
@@ -63,15 +62,16 @@ img {
 }
 
 a {
+  text-decoration: none;
   display: inline-block;
 }
 
 .container {
-  width: 100%;
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+  max-width: 428px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* -----------------------Header------------------------- */
@@ -82,12 +82,20 @@ a {
   left: 0;
   width: 100%;
 
-  min-height: 76px;
+  height: 70px;
+
   border-bottom: 1px solid var(--button-border-color);
   z-index: 10;
 }
 
 .header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 70px;
+}
+
+.header-nav {
   display: flex;
   align-items: center;
 }
@@ -107,34 +115,36 @@ a {
   color: var(--accent-color);
 }
 
-.nav-link {
+.nav-list {
+  display: none;
+}
+.address-container {
+  display: none;
+}
+
+.nav-link,
+.address-link {
   display: block;
 
-  color: var(--main-text-color);
-  font-weight: 500;
-  line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
-
-  padding-top: 24px;
-  padding-bottom: 28px;
 
   transition: color var(--timing-function);
 }
 
-.address-link {
-  display: block;
-
-  font-style: normal;
+.nav-link {
+  color: var(--main-text-color);
+  font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: inherit;
-  text-decoration: none;
-
   padding-top: 24px;
-  padding-bottom: 28px;
+  padding-bottom: 21px;
+}
 
-  transition: color var(--timing-function);
+.address-link {
+  font-style: normal;
+  color: inherit;
+  font-size: 12px;
+  line-height: 1.33;
 }
 
 .nav-link:is(:hover, :focus),
@@ -160,35 +170,115 @@ a {
   border-radius: 2px;
 }
 
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
 .header-item:not(:last-child) {
   margin-right: 40px;
 }
 
-.address-container {
-  margin-left: auto;
-}
 .address-list {
   display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
-.address-item:not(:last-child) {
-  margin-right: 40px;
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: transparent;
 }
 
-.nav-list {
+.menu-icon {
+  stroke: #2e2f42;
+}
+
+.menu-btn-close {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 16px;
+}
+
+.header-menu {
+  display: none;
+  background-color: #ffffff;
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  z-index: 100;
+}
+
+.header-menu.is-open {
   display: flex;
-  margin-left: 76px;
+}
+
+.menu-container {
+  max-width: 370px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  overflow-y: auto;
+}
+
+.menu-list {
+  margin-bottom: 40px;
+}
+
+.header .socials-list {
+  justify-content: space-between;
+}
+
+.menu-link {
+  color: var(--main-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+}
+
+.menu-item:not(:last-child),
+.menu-address-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.menu-address-link {
+  color: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.menu-address-link.phone-link {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 1.11;
+  color: var(--accent-color);
+  font-style: normal;
+  letter-spacing: 0.02em;
+}
+
+.menu-address-container {
+  margin-bottom: 48px;
+}
+.menu-link:is(:hover, :focus) {
+  color: var(--hover-text-color);
 }
 
 /* -----------------------Hero------------------------- */
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .hero.section {
@@ -196,15 +286,26 @@ a {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/studio/people-office.jpg);
+    url(../images/studio/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
-  max-width: 1440px;
   margin: 0 auto;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 114px;
+  padding-bottom: 112px;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero.section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/studio/hero-bg-mob-2x.jpg);
+  }
 }
 
 .hero.container {
@@ -215,13 +316,13 @@ a {
 
 .hero-title {
   color: var(--main-title-color);
-  font-size: 56px;
-  line-height: 1.07;
+  max-width: 320px;
+  font-size: 36px;
+  line-height: 1.11;
+  margin-bottom: 70px;
   text-align: center;
   letter-spacing: 0.02em;
-
-  max-width: 500px;
-  margin-bottom: 48px;
+  text-transform: capitalize;
 }
 
 .hero-btn,
@@ -267,6 +368,39 @@ a {
   margin: -1px;
 }
 
+.advantage-list {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+
+.advantage-item .subtitle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+}
+
+.advantage-item .section-text {
+  font-weight: 500;
+}
+
+.advantage-icon-wrap {
+  display: none;
+}
+
+/* -----------------------Doing------------------------- */
+
+.doing.section {
+  display: none;
+}
+
+/* -----------------------Our Team------------------------- */
+.team.section {
+  background-color: var(--light-bg-color);
+  padding-bottom: 128px;
+}
+
 .subtitle {
   color: var(--main-text-color);
   font-weight: 500;
@@ -277,41 +411,10 @@ a {
   margin-bottom: 8px;
 }
 
-.advantages.section {
-  padding-bottom: 0;
+.section-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
-
-.advantage-list {
-  display: flex;
-}
-
-.advantage-item {
-  flex-basis: calc((100% - 24px * 3) / 4);
-}
-
-.advantage-item:not(:last-child) {
-  margin-right: 24px;
-}
-
-.advantage-icon-wrap {
-  background-color: var(--light-bg-color);
-  height: 112px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin-bottom: 8px;
-  border-radius: 4px;
-}
-
-.advantage-icon {
-  display: block;
-  width: 64px;
-  height: 64px;
-}
-
-/* -----------------------Doing------------------------- */
 
 .section-title {
   color: var(--main-text-color);
@@ -324,35 +427,14 @@ a {
   margin-bottom: 72px;
 }
 
-.section-text {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-.doing-list {
-  display: flex;
-}
-
-.doing-item {
-  flex-basis: calc((100% -24px * 3) / 3);
-}
-
-.doing-item:not(:last-child),
-.team-card:not(:last-child) {
-  margin-right: 24px;
-}
-/* -----------------------Our Team------------------------- */
-
-.team {
-  background-color: var(--light-bg-color);
-}
-
 .team-list {
   display: flex;
+  flex-direction: column;
+  gap: 72px;
+  align-items: center;
 }
 
 .team-card {
-  flex-basis: calc((100% - 24px * 3) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: var(--card-shadow);
 }
@@ -369,22 +451,27 @@ a {
   gap: 24px;
 }
 
-.social-link {
+.social-item {
   background-color: var(--button-color);
   width: 40px;
   height: 40px;
+  border-radius: 50%;
+}
+
+.social-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  border-radius: 50%;
-
   transition: background-color var(--timing-function);
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-item:hover,
+.social-item:focus {
   background-color: var(--hover-element-color);
 }
 
@@ -396,23 +483,22 @@ a {
 .team-card .section-text {
   margin-bottom: 8px;
 }
-/* -----------------------Our clients------------------------ */
 
-.clients.section {
-  padding-top: 130px;
-}
+/* -----------------------Our clients------------------------ */
 
 .client-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  row-gap: 72px;
 }
 
 .client-item {
   background-color: transparent;
-
-  flex-basis: calc((100% - 24px * 5) / 6);
+  flex-basis: calc((100% - 16px) / 2);
   height: 88px;
 }
+
 .client-icon {
   width: 104px;
   height: 56px;
@@ -442,16 +528,18 @@ a {
 .client-link:is(:hover, :focus) > .client-icon {
   fill: var(--hover-element-color);
 }
+
 /* -----------------------Footer------------------------- */
 
 .footer {
   background-color: var(--main-bg-color);
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 
 .footer > .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 72px;
 }
 
 .footer .section-text {
@@ -459,12 +547,14 @@ a {
 }
 
 .footer .logo {
+  display: block;
+  text-align: center;
   color: var(--main-title-color);
   margin-bottom: 16px;
 }
 
 .footer .section-text {
-  max-width: 264px;
+  max-width: 268px;
   flex-shrink: 0;
 }
 
@@ -473,18 +563,19 @@ a {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 
   display: block;
   margin-bottom: 16px;
 }
 
-.footer .social-link {
+.footer .social-item {
   background-color: var(--footer-icon-bg);
 
   transition: background-color var(--timing-function);
 }
 
-.footer .social-icon {
+.socials-icon {
   width: 24px;
   height: 24px;
 }
@@ -493,20 +584,9 @@ a {
   gap: 16px;
 }
 
-.footer .social-link:hover,
-.footer .social-link:focus {
+.footer .social-item:hover,
+.footer .social-item:focus {
   background-color: var(--accent-socials-color);
-}
-
-.footer .socials-wrap {
-  margin-left: 120px;
-  margin-right: 80px;
-}
-
-/* subscribe */
-.subscribe-forms {
-  display: flex;
-  gap: 24px;
 }
 
 .footer-btn {
@@ -530,6 +610,7 @@ a {
   gap: 16px;
 
   transition: background-color var(--timing-function);
+  margin-inline: auto;
 }
 .footer-btn:hover {
   background-color: var(--hover-element-color);
@@ -546,7 +627,7 @@ a {
 
 .subscribe-mail {
   padding: 8px 16px;
-  width: 264px;
+  width: 100%;
 
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -557,6 +638,8 @@ a {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+
+  margin-bottom: 16px;
 }
 
 .subscribe-mail::placeholder {
@@ -572,6 +655,121 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
   transition: background-color 600000s 0s, color 600000s 0s;
 }
+
+/* --------------------------------------------------------- */
+/* -----------------------Portfolio------------------------- */
+.portfolio {
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.portfolio-bnt-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 16px;
+  margin-bottom: 48px;
+}
+
+.portfolio-btn {
+  font-family: "Roboto", sans-serif;
+  background-color: var(--secondary-button-color);
+  color: var(--button-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+
+  padding: 8px 16px;
+
+  border: 1px solid var(--button-border-color);
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: background-color var(--timing-function),
+    color var(--timing-function), border var(--timing-function),
+    box-shadow var(--timing-function);
+}
+
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+  background-color: var(--hover-element-color);
+  color: var(--button-text-color);
+
+  border: 1px solid transparent;
+  box-shadow: var(--portfolio-btn-shadow);
+}
+
+.card-descr {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.thumb {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.card-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  color: var(--secondary-button-color);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  background-color: var(--accent-color);
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  padding: 40px 32px;
+  transform: translateY(100%);
+  opacity: 0;
+
+  transition: transform var(--timing-function), opacity var(--timing-function);
+}
+
+.portfolio-card:hover .card-text {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.portfolio-cards-list {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+
+.portfolio-card > a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.portfolio-card {
+  flex-basis: calc((100% - 24px * 2) / 3);
+
+  transition: transform var(--timing-function),
+    box-shadow var(--timing-function);
+}
+
+.portfolio-card:is(:hover, :focus) {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-card .content {
+  padding: 32px 16px;
+  border-bottom: 1px solid var(--button-border-color);
+  border-left: 1px solid var(--button-border-color);
+  border-right: 1px solid var(--button-border-color);
+}
+
 /* -----------------------Modal------------------------- */
 .backdrop {
   position: fixed;
@@ -598,7 +796,7 @@ input:-webkit-autofill:focus {
   transform: translate(-50%, -50%) scale(1);
 
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   padding: 72px 24px 24px 24px;
 
   background-color: #fcfcfc;
@@ -613,11 +811,8 @@ input:-webkit-autofill:focus {
   transform: translate(-50%, -50%) scale(0.5);
 }
 
-.modal-close-btn {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-
+.modal-close-btn,
+.menu-btn-close {
   width: 24px;
   height: 24px;
   background-color: #e7e9fc;
@@ -634,7 +829,14 @@ input:-webkit-autofill:focus {
     color var(--timing-function);
 }
 
-.modal-close-btn:hover {
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+}
+
+.modal-close-btn:hover,
+.menu-btn-close:hover {
   background-color: var(--hover-element-color);
   cursor: pointer;
   color: #ffffff;
@@ -815,130 +1017,6 @@ input:-webkit-autofill:focus {
   color: var(--hover-text-color);
 }
 
-/* --------------------------------------------------------- */
-/* -----------------------Portfolio------------------------- */
-.portfolio {
-  padding-top: 96px;
-  padding-bottom: 120px;
-}
-
-.portfolio-bnt-list {
-  display: flex;
-  justify-content: center;
-
-  margin-bottom: 72px;
-}
-
-.portfolio-btn {
-  font-family: "Roboto", sans-serif;
-  background-color: var(--secondary-button-color);
-  color: var(--button-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  text-align: center;
-
-  padding: 12px 24px;
-
-  border: 1px solid var(--button-border-color);
-  border-radius: 4px;
-  cursor: pointer;
-
-  transition: background-color var(--timing-function),
-    color var(--timing-function), border var(--timing-function),
-    box-shadow var(--timing-function);
-}
-
-.btn-list-item:not(:last-child) {
-  margin-right: 24px;
-}
-
-.portfolio-btn:hover,
-.portfolio-btn:focus {
-  background-color: var(--hover-element-color);
-  color: var(--button-text-color);
-
-  border: 1px solid transparent;
-  box-shadow: var(--portfolio-btn-shadow);
-}
-
-.portfolio-link {
-  box-shadow: var(--);
-}
-
-.card-descr {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-.thumb {
-  position: relative;
-  width: 100%;
+.no-scroll {
   overflow: hidden;
-}
-
-.card-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  color: var(--secondary-button-color);
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  background-color: var(--accent-color);
-  border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  padding: 40px 32px;
-  transform: translateY(100%);
-  opacity: 0;
-
-  transition: transform var(--timing-function), opacity var(--timing-function);
-}
-
-.portfolio-card:hover .card-text {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.portfolio-cards-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.portfolio-card > a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.portfolio-card {
-  flex-basis: calc((100% - 24px * 2) / 3);
-
-  transition: transform var(--timing-function),
-    box-shadow var(--timing-function);
-}
-
-.portfolio-card:is(:hover, :focus) {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-card:not(:nth-child(3n)) {
-  margin-right: 24px;
-}
-
-.portfolio-card:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 48px;
-}
-
-.portfolio-card .content {
-  padding: 32px 16px;
-  border-bottom: 1px solid var(--button-border-color);
-  border-left: 1px solid var(--button-border-color);
-  border-right: 1px solid var(--button-border-color);
 }
